[gd_scene load_steps=14 format=2]

[ext_resource path="res://LevelMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://SongsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=4]
[ext_resource path="res://Controls Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/503544_Starship-Showdown.mp3" type="AudioStream" id=6]
[ext_resource path="res://scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://scripts/MenuSongsPlayer.gd" type="Script" id=8]
[ext_resource path="res://assets/music/623104_Bossfight---Milky-Ways.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/music/1029200_Bitsplosion.mp3" type="AudioStream" id=10]
[ext_resource path="res://SettingsMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/music/547884_EnV---Pearlescent.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/music/1204602_Teminite---Zero.mp3" type="AudioStream" id=13]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="MainMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="LevelMenu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="ControlsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource( 11 )]
visible = false

[node name="SongsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Transition" parent="." instance=ExtResource( 4 )]

[node name="MainSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
script = ExtResource( 8 )
main_song = ExtResource( 6 )
song1 = ExtResource( 9 )
song2 = ExtResource( 10 )
song3 = ExtResource( 12 )
song4 = ExtResource( 13 )

[connection signal="controls_menu" from="MainMenu" to="." method="_on_controls_menu"]
[connection signal="level_menu" from="MainMenu" to="." method="_on_level_menu"]
[connection signal="settings_menu" from="MainMenu" to="." method="_on_settings_menu"]
[connection signal="songs_menu" from="MainMenu" to="." method="_on_songs_menu"]
[connection signal="main_menu" from="LevelMenu" to="." method="_on_LevelMenu_main_menu"]
[connection signal="main_menu" from="ControlsMenu" to="." method="_on_ControlsMenu_main_menu"]
[connection signal="main_menu" from="SettingsMenu" to="." method="_on_SettingsMenu_main_menu"]
[connection signal="main_menu" from="SongsMenu" to="." method="_on_SongsMenu_main_menu"]
[connection signal="play_song" from="SongsMenu" to="." method="_on_play_song"]
